Biome population and dispersion changes