@@ -1,4 +1,4 @@
-package com.sereneoasis.level.world.biome.biomes.wetland.river;
+package com.sereneoasis.level.world.biome.biomes.river;
 
 import com.sereneoasis.level.world.biome.BiomeLayers;
 import com.sereneoasis.level.world.biome.BiomeRepresentation;
@@ -9,16 +9,16 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
-public class River extends BiomeRepresentation {
+public class FrozenRiver extends BiomeRepresentation {
 
     private static final HashMap<BiomeLayers, List<Material>> layers = new HashMap<>() {{
-        put(BiomeLayers.SURFACE, List.of(Material.WATER));
-        put(BiomeLayers.PRIMARY, List.of(Material.WATER));
+        put(BiomeLayers.SURFACE, List.of(Material.ICE));
+        put(BiomeLayers.PRIMARY, Arrays.asList(Material.BLUE_ICE, Material.PACKED_ICE, Material.ICE));
         put(BiomeLayers.SECONDARY, Arrays.asList(Material.COAL_ORE, Material.IRON_ORE, Material.REDSTONE_ORE, Material.LAPIS_ORE, Material.GOLD_ORE, Material.DIAMOND_ORE));
         put(BiomeLayers.BASE, List.of(Material.BEDROCK));
     }};
-    public River() {
-        super(org.bukkit.block.Biome.RIVER, "River", layers, -0.1, -0.2, 0, BiomeCategories.WET);
+    public FrozenRiver() {
+        super(org.bukkit.block.Biome.FROZEN_RIVER, "FrozenRiver", layers, -1.0, -0.3, 0, BiomeCategories.RIVER);
     }
 }
 
